<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>movai_ros_planner</name>
  <version>2.0.0</version>
  <description>
     A path planner library and node. Fork done by MOV.AI
  </description>
  <maintainer email="vicente.queiroz@mov.ai">Vicente</maintainer>
  <maintainer email="didier.alexandre@mov.ai">Didier</maintainer>
  <license>BSD</license>

  <author>David Lu!!</author>
  <url>https://github.com/MOV-AI/movai_ros_planner</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>

  <export>
      <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>

</package>
